adnapted hero and features

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Web-Studio</title>
 
   <link href="
@@ -28,7 +29,7 @@
 
 
   <!--head-->
-  <header class="header">
+  <!-- <header class="header">
 
     <div class="container header-container">
 
@@ -56,7 +57,7 @@
 
       </address>
     </div>
-  </header>
+  </header> -->
   <!--content-->
 
   <!-- hero -->
@@ -143,7 +144,7 @@
     </section>
 
     <!-- about -->
-    <section class="about">
+    <!-- <section class="about">
       <div class="container">
         <h2 class="section-title">What are we doing</h2>
         <ul class="section-img">
@@ -153,8 +154,8 @@
           <li><img src="./images/laptop-and-phone.jpg" alt="laptop-and-phone" width="360" height="300"></li>
         </ul>
       </div>
-    </section>
-    <section class="team">
+    </section> -->
+    <!-- <section class="team">
       <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list">
@@ -339,11 +340,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
 
     <!-- Customers -->
-    <section class="Customers">
+    <!-- <section class="Customers">
       <div class="container">
 
         <h3 class="section-title">Customers</h3>
@@ -410,14 +411,14 @@
         </ul>
       </div>
 
-    </section>
+    </section> -->
 
 
 
   </main>
 
   <!--footer-->
-  <footer class="section-footer">
+  <!-- <footer class="section-footer">
     <div class="container container-footer">
       <div class="footer-logo-p">
         <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
@@ -472,37 +473,37 @@
       </div>
 
       <!-- Subscribe -->
-      <div class="section-subscribe">
+  <!-- <div class="section-subscribe">
 
-        <p class="subscribe-footer">Subscribe</p>
+    <p class="subscribe-footer">Subscribe</p>
 
-        <form action="">
+    <form action="">
 
-          <div class="form-field-footer">
+      <div class="form-field-footer">
 
-            <input class="input-footer" type="email" name="email" placeholder="E-mail">
+        <input class="input-footer" type="email" name="email" placeholder="E-mail">
 
-            <button class="foter-button" type="submit">
-              Subscribe
+        <button class="foter-button" type="submit">
+          Subscribe
 
-              <svg class="footer-icon-btn">
-                <use href="./images/icons.svg#icon-send"></use>
+          <svg class="footer-icon-btn">
+            <use href="./images/icons.svg#icon-send"></use>
 
-              </svg>
-            </button>
-
-          </div>
-
+          </svg>
+        </button>
 
       </div>
 
 
+  </div> -->
 
 
-      </form>
 
-    </div>
-  </footer>
+
+  </form>
+
+  </div>
+  </footer> -->
 
 
   <!-- modal-hero -->
