--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Portfolio</title>
 
     <link href="
@@ -355,7 +356,7 @@
 
                     <div class="form-field-footer">
 
-                        <input class="input-footer" type="text" name="e-mail" placeholder="E-mail">
+                        <input class="input-footer" type="email" name="email" placeholder="E-mail">
 
                         <button class="foter-button" type="submit">
                             Subscribe
