--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <h2 class="visually-hidden">features</h2>
         <ul class="features-list">
-          <li>
+          <li class="features-item">
 
             <div class="icon-container">
               <svg class="svg-features">
@@ -91,7 +91,7 @@
             <p class="section-paragraph">Our goal is to identify the business
               problem to walk away with the perfect and creative solution.</p>
           </li>
-          <li>
+          <li class="features-item">
 
             <div class="icon-container">
               <svg class="svg-features">
@@ -107,7 +107,7 @@
               shortest possible
               time.</p>
           </li>
-          <li>
+          <li class="features-item">
 
             <div class="icon-container">
               <svg class="svg-features">
@@ -123,7 +123,7 @@
               opportunities and minimize
               risk.</p>
           </li>
-          <li>
+          <li class="features-item">
 
             <div class="icon-container">
               <svg class="svg-features">
@@ -144,9 +144,9 @@
     </section>
 
     <!-- about -->
-    <!-- <section class="about">
+    <section class="about">
       <div class="container">
-        <h2 class="section-title">What are we doing</h2>
+        <h2 class="section-title-about">What are we doing</h2>
         <ul class="section-img">
           <li><img src="./images/computer-screen.jpg" alt="computer-screen" width="360" height="300">
           </li>
@@ -154,8 +154,11 @@
           <li><img src="./images/laptop-and-phone.jpg" alt="laptop-and-phone" width="360" height="300"></li>
         </ul>
       </div>
-    </section> -->
-    <!-- <section class="team">
+
+    </section>
+
+    <!-- team -->
+    <section class="team">
       <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list">
@@ -340,7 +343,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
 
     <!-- Customers -->
@@ -503,7 +506,7 @@
   </form>
 
   </div>
-  </footer> -->
+  </footer>
 
 
   <!-- modal-hero -->
