--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <ul class="team-list">
           <li class="team-item"><img src="./images/Mark-Guerrero.jpg" alt=" Mark-Guerrero-Product-Designer" width="264"
               height="260">
-            <h3 class="section-subtile">Mark Guerrero</h3>
+            <h3 class="team-subtile">Mark Guerrero</h3>
             <p class="section-paragraph team-paragraph">Product Designer</p>
 
             <ul class="social-list">
@@ -208,7 +208,7 @@
           </li>
           <li class="team-item"><img src="./images/Tom-Ford.jpg" alt=" Tom Ford Frontend Developer" width="264"
               height="260">
-            <h3 class="section-subtile">Tom Ford</h3>
+            <h3 class="team-subtile">Tom Ford</h3>
             <p class="section-paragraph team-paragraph">Frontend Developer</p>
 
             <ul class="social-list">
@@ -253,7 +253,7 @@
           </li>
           <li class="team-item"><img src="./images/Camila-Garcia.jpg" alt="Camila Garcia Marketing" width="264"
               height="260">
-            <h3 class="section-subtile">Camila Garcia</h3>
+            <h3 class="team-subtile">Camila Garcia</h3>
             <p class="section-paragraph team-paragraph">Marketing</p>
 
             <ul class="social-list">
@@ -298,7 +298,7 @@
 
           </li>
           <li class="team-item"><img src="./images/Daniel-Wilson.jpg" alt="UI Designer" width="264" height="260">
-            <h3 class="section-subtile">Daniel Wilson</h3>
+            <h3 class="team-subtile">Daniel Wilson</h3>
             <p class="section-paragraph team-paragraph">UI Designer</p>
 
             <ul class="social-list">
