--- a/index.html
+++ b/index.html
@@ -29,17 +29,30 @@
 
 
   <!--head-->
-  <!-- <header class="header">
+  <header class="header">
 
     <div class="container header-container">
 
       <nav class="container-nav">
-        <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
+
+        <div class="menu-container">
+          <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
+
+          <button class="menu-button" type="button">
+            <svg width="32" height="24">
+              <use class="icon-cross" href="./images/icons.svg#icon-button-close"></use>
+              <use class="icon-menu" href="./images/icons.svg#icon-btn-hamburger"></use>
+            </svg>
+
+          </button>
+        </div>
+
         <ul class="site-nav">
           <li> <a href="./index.html" class="nav-link current">Studio</a></li>
           <li> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
           <li> <a href="" class="nav-link">Contacts</a></li>
         </ul>
+
       </nav>
 
 
@@ -57,7 +70,7 @@
 
       </address>
     </div>
-  </header> -->
+  </header>
   <!--content-->
 
   <!-- hero -->
