--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,25 @@
         <div class="container header-container">
 
             <nav class="container-nav">
-                <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
+
+                <div class="menu-container">
+                    <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
+
+                    <button class="menu-button js-open-menu" type="button" aria-expanded="false">
+                        <svg width="32" height="24">
+
+                            <use class="icon-menu" href="./images/icons.svg#icon-btn-hamburger"></use>
+                        </svg>
+
+                    </button>
+                </div>
+
                 <ul class="site-nav">
-                    <li> <a href="./index.html" class="nav-link">Studio</a></li>
-                    <li> <a href="./portfolio.html" class="nav-link current">Portfolio</a></li>
+                    <li> <a href="./index.html" class="nav-link current">Studio</a></li>
+                    <li> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
                     <li> <a href="" class="nav-link">Contacts</a></li>
                 </ul>
+
             </nav>
 
 
@@ -55,6 +68,83 @@
                 </ul>
 
             </address>
+
+
+
+            <div class="mobile-menu js-menu-container">
+                <button class="close-mobile-btn js-close-menu" type="button">
+                    <svg class="close-mobile-svg">
+                        <use href="./images/icons.svg#icon-button-close"></use>
+                    </svg>
+                </button>
+
+                <nav class="container-nav">
+
+
+                    <ul class="site-nav-mobile">
+                        <li class="nav-item"> <a href="./index.html" class="nav-link current">Studio</a></li>
+                        <li class="nav-item"> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+                        <li class="nav-item"> <a href="" class="nav-link">Contacts</a></li>
+                    </ul>
+
+                </nav>
+
+                <div>
+                    <address>
+
+                        <ul class="address-mobile">
+                            <li class="address-link-tel">
+                                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+
+                            </li>
+                            <li class="address-link">
+                                <a href="mailto:info@devstudio.com">info@devstudio.com </a>
+                            </li>
+                        </ul>
+
+                    </address>
+
+                    <ul class="social-list-header">
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+
+                                <svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+
+                                <svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+
+                                <svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+
+                                <svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                </div>
+
+            </div>
+
         </div>
     </header>
 
@@ -381,8 +471,11 @@
     </footer>
 
 
-
-
+    <!-- script -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script src="./js/mobile-menu.js"></script>
 
 </body>
 
