--- a/portfolio.html
+++ b/portfolio.html
@@ -383,91 +383,94 @@
 
     <!--footer-->
     <footer class="section-footer">
+
         <div class="container container-footer">
-            <div class="footer-logo-p">
-                <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
+            <div class="tablet-container">
+                <div class="footer-logo-p">
+                    <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
 
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
-                    &
-                    growth
-                    solutions.</p>
+                    <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                        marketing
+                        &
+                        growth
+                        solutions.</p>
+                </div>
+
+
+                <div class="footer-social-media">
+                    <h4 class="footer-title">Social media</h4>
+
+                    <ul class="footer-social-list">
+                        <li class="footer-social-item">
+                            <a class="footer-social-link" href="#">
+
+                                <svg class="footer-social-icon">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                        <li class="footer-social-item">
+                            <a class="footer-social-link" href="#">
+
+                                <svg class="footer-social-icon">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                        <li class="footer-social-item">
+                            <a class="footer-social-link" href="#">
+
+                                <svg class="footer-social-icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                        <li class="footer-social-item">
+                            <a class="footer-social-link" href="#">
+
+                                <svg class="footer-social-icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
 
-
-            <div class="footer-social-media">
-                <h4 class="footer-title">Social media</h4>
-
-                <ul class="footer-social-list">
-                    <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">
-
-                            <svg class="footer-social-icon">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-
-                        </a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">
-
-                            <svg class="footer-social-icon">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-
-                        </a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">
-
-                            <svg class="footer-social-icon">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-
-                        </a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">
-
-                            <svg class="footer-social-icon">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-
-                        </a>
-                    </li>
-                </ul>
-            </div>
 
             <!-- Subscribe -->
             <div class="section-subscribe">
 
                 <p class="subscribe-footer">Subscribe</p>
 
-                <form action="">
+                <form class="subscribe">
 
-                    <div class="form-field-footer">
+                    <input class="input-footer" type="email" name="email" placeholder="E-mail">
 
-                        <input class="input-footer" type="email" name="email" placeholder="E-mail">
+                    <button class="foter-button" type="submit">
+                        Subscribe
 
-                        <button class="foter-button" type="submit">
-                            Subscribe
+                        <svg class="footer-icon-btn">
+                            <use href="./images/icons.svg#icon-send"></use>
 
-                            <svg class="footer-icon-btn">
-                                <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
 
-                            </svg>
-                        </button>
 
-                    </div>
 
 
             </div>
 
 
-
-
             </form>
 
         </div>
+
     </footer>
 
 
